# v4-portfolio

./: .dockerignore  .env.example  .gitignore  CONFIG.md  DEPLOY.md  Dockerfile  README.md  STRATEGY_LOGIC.md  STRATEGY_SETTINGS.md  bot_reporter.py  compose.V4.yml  compose.ichi1.yml  compose.ichi2.yml  compose.vse1.yml  compose.vse2.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  strategy.md
config/: config.yaml  config_ichi1.yaml  config_ichi2.yaml  config_v4.yaml
core/: bot_control.py  bot_state.py  config.py  exchange_api.py  monitoring.py  no_lookahead.py  position_sizing.py  private_ws.py  rate_limiter.py  telegram_bot.py
results/: all_sweep_variants.csv  backtest_v4_equity.csv  backtest_v4_trades.csv  combo_sl5_alts_annual.csv  screen_all_pairs.csv
scripts/: backtest.py  backtest_fixed_risk.py  backtest_v4.py  backtest_v4_multi.py  combo_aggressive.py  combo_alts_sl5.py  combo_alts_sl5_annual.py  combo_consistency.py  combo_sl5.py  combo_test.py  compare_pine_python.py  compare_pine_vs_replay.py  consistency_analysis.py  diag_bybit.py  export_replay_trades.py  ont_1h_vs_2h.py  parse_all_sweeps.py  preflight_check.py  run_live.py  run_replay.py  screen_all_pairs.py  sl_consistency.py  smoke_test.py  sun_per_year.py  sweep_aero.py  sweep_pair.py  test_ont_live.py  test_ont_replicate_container.py  two_bots.py  two_bots_split.py
static/: chart_live.html  ichimoku_strategy.pine  v4_strategy.pine  vse_balanced_strategy.pine  vse_balanced_verify.pine
strategies/: bb_mr_signal.py  ichimoku_signal.py
tests/: test_cycle_manager.py  (+1 more)
(+27 files in other folders)
