[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ichimoku_bot"
version = "0.1.0"
description = "Hull+Ichimoku 2-pair trading bot for Bybit perpetuals (MNT+DOT)"
requires-python = ">=3.10"
authors = [{name = "Dan"}]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
